--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,10 +1,11 @@
-name: 'Auto Assign'
-on:
-  pull_request:
-    types: [opened, reopened]
+name: "Pull Request Labeler"
+
+on: pull_request_target
 
 jobs:
-  add-reviews:
+  triage:
     runs-on: ubuntu-latest
     steps:
-      - uses: kentaro-m/auto-assign-action@v1.1.2
+    - uses: actions/labeler@main
+      with:
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
