Non-root user in docker container
- uid=1001(developer)

--- a/kubernetes-intro/web/Dockerfile
+++ b/kubernetes-intro/web/Dockerfile
@@ -13,5 +13,8 @@ WORKDIR /src
 COPY --from=builder /go/bin/web /src/web
 COPY ./app ./app
 
+RUN addgroup -S -g 1001 developer && adduser -S developer -G developer --uid 1001
+USER developer
+
 EXPOSE 8000
 ENTRYPOINT ["/src/web"]
