--- a/kubernetes-intro/web/Dockerfile
+++ b/kubernetes-intro/web/Dockerfile
@@ -4,18 +4,19 @@ RUN apk add build-base
 COPY . /src
 WORKDIR /src
 
-RUN go build -o /go/bin/web .
+RUN go build -o /go/bin/go-server .
 
 FROM alpine as release
 RUN apk add --no-cache ca-certificates \
     busybox-extras net-tools bind-tools
-WORKDIR /src
-COPY --from=builder /go/bin/web /src/web
-COPY ./app ./app
+RUN mkdir /app
+COPY ./homework.html /app/.
+WORKDIR /app
+COPY --from=builder /go/bin/go-server /src/go-server
 
 RUN addgroup -S -g 1001 developer && adduser -S developer -G developer --uid 1001
-RUN chown -Rvc developer:developer /src
+RUN chown -Rvc developer:developer /app
 USER developer
 
 EXPOSE 8000
-ENTRYPOINT ["/src/web"]
+ENTRYPOINT ["/src/go-server"]
