--- a/kubernetes-intro/web/web-pod.yaml
+++ b/kubernetes-intro/web/web-pod.yaml
@@ -7,17 +7,24 @@ metadata:
 spec:
   containers: 
     - name: web
-      image: mansory/web:intro
+      image: mansory/web:version-2
+      volumeMounts:
+      - mountPath: /app
+        name: app
+      resources:
+        requests:
+          memory: "64Mi"
+          cpu: "250m"
+        limits:
+          memory: "128Mi"
+          cpu: "500m"
+  initContainers:
+    - name: page
+      image: busybox:1.31.0
+      command: ['sh', '-c', 'wget -O- https://tinyurl.com/otus-k8s-intro | sh']
       volumeMounts:
       - mountPath: /app
         name: app
   volumes:
     - name: app
       emptyDir: {}
-  initContainers:
-    - name: page
-      image: busybox:1.31.0
-      command: ['sh', '-c', 'wget -O- https://tinyurl.com/otus-k8s-intro | sh && cat /app/index.html']
-      volumeMounts:
-      - mountPath: /app
-        name: app
