--- a/kubernetes-security/task03/01-sa-dev.yaml
+++ b/kubernetes-security/task03/01-sa-dev.yaml
@@ -20,9 +20,10 @@ metadata:
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: jane-crb
+  namespace: dev
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -34,9 +35,10 @@ subjects:
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: ken-crb
+  namespace: dev
 roleRef:
   kind: ClusterRole
   name: view
